# lnurlw-server

./: .gitignore  Cargo.toml  PLAN.md  README.md  flake.nix  test.http
migrations/: 001_initial.sql
src/: app_state.rs  config.rs  main.rs
src/crypto/: mod.rs
src/db/: mod.rs  models.rs  queries.rs
src/handlers/: lnurlw.rs  mod.rs  register.rs
src/lightning/: mod.rs
src/validation/: db_repository.rs  mod.rs  pure.rs
